crates/cuda-device/tests/compile_fail/thread_index_coord2d32_native_coordinates.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_index_coord2d32_native_coordinates.rs:11:36
   |
11 |     let _ = __internal::coord_2d32(scope);
   |             ---------------------- ^^^^^ expected `&KernelScope<'_, Domain2, ...>`, found `&KernelScope<'_, Domain2>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected reference `&cuda_device::KernelScope<'_, cuda_device::__internal::Domain2, cuda_device::__internal::U32Coordinates>`
              found reference `&'kernel cuda_device::KernelScope<'kernel, cuda_device::__internal::Domain2, cuda_device::__internal::NativeCoordinates>`
note: function defined here
  --> src/thread.rs
   |
   |     pub fn coord_2d32<'kernel>(
   |            ^^^^^^^^^^
